Fixed overlaping problem on pictures section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -268,6 +268,10 @@ ul.thumbs li a p {
     width: 100%;
 }
 
+#pictures{
+    display: none;
+}
+
 /* =========================
 
                         FOOTER 
